Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60232

|Linux]: When using QWebEngineView with software rendering (i.e. no OpenGL) then it can crash

XMLWordPrintable

      Linux]: When using QWebEngineView with software rendering (i.e. no OpenGL) then it can crash. It crashes with the following:
      #0  0x00007fffe85b2ff0 in __dynamic_cast () from /usr/lib/x86_64-linux-
      gnu/libstdc++.so.6
      #1  0x00007fffea2142ab in QSGSoftwareImageNode::paint (this=0x7ffe0a44e5e0,
      painter=0x7fffffffcc40)
         at scenegraph/adaptations/software/qsgsoftwarepublicnodes.cpp:101
      #2  0x00007fffea21c669 in QSGSoftwareRenderableNode::renderNode
      (this=0x7ffdd10e81f0, painter=0x7fffffffcc40, forceOpaquePainting=false)
         at scenegraph/adaptations/software/qsgsoftwarerenderablenode.cpp:324
      #3  0x00007fffea20cb7b in QSGAbstractSoftwareRenderer::renderNodes
      (this=0x7ffdd08d3460, painter=0x7fffffffcc40)
         at scenegraph/adaptations/software/qsgabstractsoftwarerenderer.cpp:134
      #4  0x00007fffea223acc in QSGSoftwareRenderer::render (this=0x7ffdd08d3460) at
      scenegraph/adaptations/software/qsgsoftwarerenderer.cpp:155
      #5  0x00007fffea197e91 in QSGRenderer::renderScene (this=0x7ffdd08d3460,
      bindable=warning: RTTI symbol not found for class
      'QSGSoftwareRenderer::renderScene(unsigned int)::B'
      ...) at scenegraph/coreapi/qsgrenderer.cpp:241
      #6  0x00007fffea2237c2 in QSGSoftwareRenderer::renderScene
      (this=0x7ffdd08d3460) at
      scenegraph/adaptations/software/qsgsoftwarerenderer.cpp:95
      #7  0x00007fffea20c247 in QSGSoftwareRenderContext::renderNextFrame
      (this=0x7ffd9e510ea0, renderer=0x7ffdd08d3460, fbo=0)
         at scenegraph/adaptations/software/qsgsoftwarecontext.cpp:160
      #8  0x00007fffea265b60 in QQuickWindowPrivate::renderSceneGraph
      (this=0x7ffe0a1ad820, size=...) at items/qquickwindow.cpp:465
      #9  0x00007fffea3564a2 in QQuickRenderControl::render (this=0x7ffdc65bb070) at
      items/qquickrendercontrol.cpp:343
      #10 0x00007fffe73cc89b in QQuickWidgetPrivate::render (this=0x7ffd9e796b20,
      needsSync=true) at qquickwidget.cpp:303
      #11 0x00007fffe73cca0c in QQuickWidgetPrivate::renderSceneGraph
      (this=0x7ffd9e796b20) at qquickwidget.cpp:328
      #12 0x00007fffe73cf319 in QQuickWidget::timerEvent (this=0x7ffdc64bc880,
      e=0x7fffffffd820) at qquickwidget.cpp:1109
      #13 0x00007fffe8e931fd in QObject::event (this=0x7ffdc64bc880,
      e=0x7fffffffd820) at kernel/qobject.cpp:1244
      #14 0x00007ffff68611a1 in QWidget::event (this=0x7ffdc64bc880,
      event=0x7fffffffd820) at kernel/qwidget.cpp:9220
      #15 0x00007fffe73d0616 in QQuickWidget::event (this=0x7ffdc64bc880,
      e=0x7fffffffd820) at qquickwidget.cpp:1442
      #16 0x00007ffff7f16dea in
      QtWebEngineCore::RenderWidgetHostViewQtDelegateWidget::event
      (this=0x7ffdc64bc880, event=0x7fffffffd820)
         at render_widget_host_view_qt_delegate_widget.cpp:444
      #17 0x00007ffff6808fb6 in QApplicationPrivate::notify_helper (this=0xf76410,
      receiver=0x7ffdc64bc880, e=0x7fffffffd820)
         at kernel/qapplication.cpp:3745
      #18 0x00007ffff6808dba in QApplication::notify (this=0x7fffffffdbd0,
      receiver=0x7ffdc64bc880, e=0x7fffffffd820) at kernel/qapplication.cpp:3708
      #19 0x00007fffe8e5452f in QCoreApplication::notifyInternal2
      (receiver=0x7ffdc64bc880, event=0x7fffffffd820) at
      kernel/qcoreapplication.cpp:988
      #20 0x00007fffe8e588c6 in QCoreApplication::sendEvent
      (receiver=0x7ffdc64bc880, event=0x7fffffffd820)
         at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
      #21 0x00007fffe8ed9a6f in QTimerInfoList::activateTimers (this=0x10ef8f0) at
      kernel/qtimerinfo_unix.cpp:643
      #22 0x00007fffe8edb3d4 in timerSourceDispatch (source=0x10ef890) at
      kernel/qeventdispatcher_glib.cpp:182
      #23 0x00007fffe6ec0197 in g_main_context_dispatch () from /lib/x86_64-linux-
      gnu/libglib-2.0.so.0
      #24 0x00007fffe6ec03f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #25 0x00007fffe6ec049c in g_main_context_iteration () from /lib/x86_64-linux-
      gnu/libglib-2.0.so.0
      #26 0x00007fffe8edbe0a in QEventDispatcherGlib::processEvents (this=0xfb2d50,
      flags=...) at kernel/qeventdispatcher_glib.cpp:423
      #27 0x00007fffdcc2fe54 in QPAEventDispatcherGlib::processEvents
      (this=0xfb2d50, flags=...) at qeventdispatcher_glib.cpp:121
      #28 0x00007fffe8e50b8e in QEventLoop::processEvents (this=0x7fffffffdb10,
      flags=...) at kernel/qeventloop.cpp:134
      #29 0x00007fffe8e50ec5 in QEventLoop::exec (this=0x7fffffffdb10,
      flags=...) at kernel/qeventloop.cpp:212
      #30 0x00007fffe8e54d25 in QCoreApplication::exec () at
      kernel/qcoreapplication.cpp:1261
      #31 0x00007fffe99794e4 in QGuiApplication::exec () at
      kernel/qguiapplication.cpp:1657
      #32 0x00007ffff6805bc5 in QApplication::exec () at
      kernel/qapplication.cpp:2921
      #33 0x00000000007a2d20 in main (argc=1, argv=0x7fffffffdd28) at main.cxx:49
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes